# sunbeam-tutorials

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  requirements.txt
confs/: exercise2.conf  full_sunbeam.conf  setup.conf
docs/source/: balance_property.rst  conf.py  index.rst  introduction.rst  mint_burn.rst  mutations.rst  transfer_rules.rst  warmup.rst
docs/source/token/: balance_property.rst  index.rst  insufficient.rst  introduction.rst  mint_burn.rst  mutations.rst  transfer_rules.rst  warmup.rst
projects/token/: Cargo.toml  certora_build.py
projects/token/confs/: exercise1.conf  exercise2.conf  exercise3.conf  full_sunbeam.conf  setup.conf
projects/token/solutions/: solution_specs.rs
projects/token/src/certora/: spec.rs
src/certora/: spec.rs
