[package]
name = "certora-meridian24-token"
version = "0.0.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.6.0" }

nondet = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=["soroban"]}
cvt = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=[]}
cvt-soroban = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false}
cvt-soroban-macros = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false}

[features]
cvt = []

[dev-dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
