[package]
name = "certora-meridian24-token"
version = "0.0.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.6.0" }

nondet = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=["soroban"]}
certora = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=[]}
certora-soroban = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false}
certora-soroban-macros = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false}


cvlr-asserts = { git = "https://github.com/1arie1/cvlr.git" }
cvlr-nondet = { git = "https://github.com/1arie1/cvlr.git", default-features = false, features = [] }
#cvlr-asserts = { path = "../../../../crates/cvlr/cvlr-asserts/" }
#cvlr-nondet = { path = "../../../../crates/cvlr/cvlr-nondet/", default-features = false, features = [] }

[features]
certora = []

[dev-dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
