[package]
name = "certora-meridian24-token"
version = "0.0.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.7" }


cvlr = {git = "https://github.com/Certora/cvlr.git",  default-features=false}

cvlr-soroban = {git = "https://github.com/Certora/cvlr-soroban.git"}
cvlr-soroban-derive = {git = "https://github.com/Certora/cvlr-soroban.git"}
cvlr-soroban-macros = {git = "https://github.com/Certora/cvlr-soroban.git"}


[features]
certora = []

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
